# KS-2025

./: .gitignore
Lab10/: Program.cs
Lab12/Reader/: Reader.cs
Lab12/Writer/: Writer.cs
Lab13/Lab13_MultiClient/: Program.cs
Lab13/Lab13_MultiClientServer/: Program.cs
Lab14/: Program.cs
Lab15/: CMakeLists.txt  main.c
Lab16/: hello_openmp_mpi.c  reduce.c  ring.c
Lab17/: mpi_only.c  mpi_stub.h  open_mp_only.c
Lab18/: main.c
Lab18/CL/: opencl.h
Lab2Threads/: Lab2Threads.sln  Program.cs  Звіт.docx
Lab5/: Program.cs
Lab6/: Program.cs
Lab7/Lab7AssetsGen/: Program.cs
Lab7/Lab7Avalonia/: App.axaml  App.axaml.cs  Lab7AvaloniaSync.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
Lab8/: Program.cs
Lecture12/: cuda.cpp  open_cl.cpp  open_cp_simple.cpp
Lecture4/RaceCondition/: Program.cs
Lecture5/: Program.cs
Lecture6/Barier/: Program.cs
Lecture6/Compare/: Program.cs
Lecture6/Countdown/: Program.cs
Lecture6/LockSample/: Program.cs
Lecture6/Monitor/: Program.cs
Lecture6/Reader/: Program.cs
Lecture6/Semaphore/: Program.cs
Lecture7/MQC/: receiver.c  sender.c
Lecture7/MQReceiver/: Program.cs
Lecture7/MQSender/: Program.cs
Lecture7/PipeClient/: Program.cs
Lecture7/PipeServer/: Program.cs
Lecture7/SharedClient/: Program.cs
Lecture7/SharedServer/: Program.cs
Lecture7/SocketClient/: Program.cs
Lecture7/SocketServer/: Program.cs
Lecture8/HelloOpenMP/: CMakeLists.txt  main  main.c
Lecture9/: main.c
Lecutre2/: main.c  results.txt
